<resources>
    <string name="app_name">ProjetoAuto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_financeiro">Financeiro</string>
    <string name="menu_conta">Conta</string>
    <string name="menu_agenda">Agenda</string>

    <string name="valor_automovel">R$ %1$s</string>
    <string name="data_publicacao">Publicado %1$s</string>

</resources>